Updated search engine
Added rep ranges for each exercise, and a slightly more flexible search engine

--- a/about.html
+++ b/about.html
@@ -12,8 +12,11 @@
     <body class = "ridge">
         <button class = "topribbon"><a href = "index.html">Back</a></button>
         <h1>About this Webpage</h1>
-        <p>My name is Eric Lehmann, the creator of this website, and I am a computer science student at UMass Amherst. This page serves as a simple tool that can help anyone and everyone who is interested in lifting weights. When I first started lifting weights, one of the most difficult obstacles I had to overcome was simply learning all of the many different weightlifting techniques - the best form for each exercise, the best rep ranges/number of sets to optimize muscle growth, etc. 
+        <hr>
+        <p class = "about">My name is Eric Lehmann, the creator of this website, and I am a computer science student at UMass Amherst. This page serves as a simple tool that can help anyone and everyone who is interested in lifting weights. When I first started lifting weights, one of the most difficult obstacles I had to overcome was simply learning all of the many different weightlifting techniques - the best form for each exercise, the best rep ranges/number of sets to optimize muscle growth, etc. 
             I am creating this website to serve those who struggled like me. I want this to be a place where beginners can easily learn about all sorts of different exercises at the click of a button. 
         </p>
+        <p class = "about"><b>NOTE:</b> all of the advice that I give on this website is completely subjective. This is stuff that has worked for me, and may not work for everyone. There is no single "best" way to workout - at the end of the day, do what feels best for <b>YOU.</b></p>
+        <hr>
     </body>
 </html>
