--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
         <link rel = "stylesheet" type = "text/css" href = "stylesheet.css">
     </head>
     <body class = "ridge">
-        <center><h1>MEATHEAD</h1></center>
+        <h1>MEATHEAD</h1>
         <hr>
         <button class = "topribbon"><a href = "about.html">About</a></button>
         <button class = "topribbon"><a href = "searchbar.html">Search</a></button>
         <hr>
-        <center><p>Do you need to know more about various exercises/lifting techniques? If so, click this handsome figure below to be taken to a <b>search engine for different workouts!<b></b></p>
-    </center>
+        <p>Do you need to know more about various exercises/lifting techniques? If so, click this handsome figure below to be taken to a <b>search engine for different workouts!</b></p>
 
         <center><button><a href = "searchbar.html"><img src = "bodybuilder.jpg" id = "bbimg"></a></button></center>
         
